# Apexlegend_analysis

./: .pre-commit-config.yaml  APEX_analysis.ipynb  README.md  data.html  data.txt  pyproject.toml  setup.py
src/: auth.py
src/apex_analysis/: __main__.py  cli.py
src/apex_analysis/Analysis/: eda.py
src/apex_analysis/Scrape/: scraper.py
src/apex_analysis/Selenium/: selenium.py
src/apex_analysis_package/: __main__.py  cli.py
src/apex_analysis_package/API/: api_related.py
src/apex_analysis_package/Analysis/: EDA.py
src/apex_analysis_package/Scrape/: scraper.py
src/apex_analysis_package/Selenium/: Selenium.py
src/apex_analysis_package/XML/: xml_related.py
src/my_package/: EDA.py  api_related.py  scraper.py  xml_related.py
src/my_package/API/: api_related.py
src/my_package/Analysis/: EDA.py
src/my_package/Scrape/: scraper.py
src/my_package/Selenium/: Selenium.py
src/my_package/XML/: xml_related.py
