[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "apex_analysis"
authors = [
    {name = "Ruoyu Chen", email = "rchen2@mail.yu.edu"}
]
maintainers = [
    {name = "Ruoyu Chen", email = "rchen2@mail.yu.edu"},
]
description = "Apex Legend analysis: project 2 for Analytics Programming"
readme = "README.md"
keywords = ["data visualization", "APEX Legends", "Analytics Programming"]
license = {text = "MIT License"}
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.3",
    "numpy>=1.20",
    "pandas>=1.4",
    "scipy>=1.10.0",
    "tqdm>=4.64.1",
    "beautifulsoup4>=4.10.0",
    "selenium>=4.4.3",
    "requests>=2.27.1"
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/jc000222/Apexlegend_analysis"
Reference = "https://apexlegendsstatus.com/"

[project.scripts]
apex_analysis = "apex_analysis_package.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.poetry]
name = "apex_analysis"
